--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
     "d3": "^5.9.7",
+    "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.4.2",
     "vue-router": "^3.0.3",
+    "vuejs-datepicker": "^1.6.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
